<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PasswordDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/password_dialog_title"
            android:textAlignment="textStart"
            android:textColor="@color/brand_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/subtitle_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_dialog_subtitle" />

        <TextView
            android:id="@+id/password_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Error message"
            android:textColor="@color/red"
            android:visibility="gone" />

        <EditText
            android:id="@+id/password_textfield"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password_dialog_password_text"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/repeat_password_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_dialog_repeat_password_text"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corner"
                android:text="@string/password_dialog_cancel_button"
                android:textColor="@color/brand" />

            <Button
                android:id="@+id/continue_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corner"
                android:backgroundTint="@color/brand_light"
                android:text="@string/password_dialog_continue_button"
                android:textColor="@color/brand" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>