<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ReportDateDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/report_infection_dialog_title"
            android:textAlignment="textStart"
            android:textColor="@color/brand_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/report_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/report_infection_dialog_date_symptoms"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/report_infection_dialog_date_diagnostic"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start_symp_date_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/field_rounded_corner"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/placeholder_date"
                    android:textAlignment="center"
                    android:textColor="@color/brand_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/diagnostic_date_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/field_rounded_corner"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/placeholder_date"
                    android:textAlignment="center"
                    android:textColor="@color/brand_dark"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corner"
                android:text="@string/report_infection_dialog_cancel_button"
                android:textColor="@color/brand" />

            <Button
                android:id="@+id/continue_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corner"
                android:backgroundTint="@color/brand_light"
                android:text="@string/report_infection_dialog_continue_button"
                android:textColor="@color/brand" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>