<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LauchingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="258dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_covid_exclamation" />

        <TextView
            android:id="@+id/lauching_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/lauching_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launching_subtitle"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/register_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:foregroundGravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lauching_button_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:visibility="gone">

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@drawable/button_rounded_corner"
                android:backgroundTint="@color/brand_light"
                android:text="@string/lauching_button"
                android:textColor="@color/brand"
                android:visibility="visible"
                app:circularflow_radiusInDP="4pt"
                tools:layout_editor_absoluteY="526dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>